Created navbar and added banner image.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
 <body>
     <!-- HOME PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+    </nav>
+    </ul>
     <!-- TODO: Banner Image here-->
+    <img id="banner" src="assets/images/banner.png" alt="banner">
     <main>
         <h1>H-Thai-ML</h1>
         <!-- TODO: Home page code here-->
+        <h2>Savoring Success in Every Byte</h2>
     </main>
 </body>
 </html>
