--- a/about.html
+++ b/about.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <!-- Remember to link to your CSS file! -->
 </head>
 <body>
     <!-- ABOUT PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+    </nav>
+    </ul>
     <!-- TODO: Banner Image here-->
+    <img id="banner" src="assets/images/banner.png" alt="banner">
     <main>
         <!-- About page code here -->
     </main>
