--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <!-- Remember to link to your CSS file! -->
 </head>
 <body>
     <!-- CONTACT PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+    </nav>
+    </ul>
     <!-- TODO: Banner Image here-->
+    <img id="banner" src="assets/images/banner.png" alt="banner">
     <main>
         <h2>Hours of Operation</h2>
         <p>
