updated navbar, moved About Us to About.HTML

--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,11 @@
     <!-- CONTACT PAGE -->
     <!-- TODO: Navbar here -->
     <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#menu">Menu</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-    </nav>
-    </ul>
+        <a href="index.html">Home</a>
+        <a href="menu.html">Menu</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+</nav>
     <!-- TODO: Banner Image here-->
     <img id="banner" src="assets/images/banner.png" alt="banner">
     <main>
@@ -31,6 +29,12 @@
         <h2>Contact Info</h2>
         <p>
             <strong>Phone Number:</strong> TBD
+        </p>
+        <p>
+            <strong>Email:</strong> TBD
+        </p>
+        <p>
+            <strong>Address:</strong> TBD
         </p>
     </main>
 </body>
