--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
     <!-- HOME PAGE -->
     <!-- TODO: Navbar here -->
     <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#menu">Menu</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <a href="index.html">Home</a>
+            <a href="menu.html">Menu</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
     </nav>
-    </ul>
     <!-- TODO: Banner Image here-->
     <img id="banner" src="assets/images/banner.png" alt="banner">
     <main>
@@ -33,17 +31,6 @@
             <h3>Delivery</h3>
         </div>
         <img src="assets/images/table-in-restaurant.jpg">
-        <h1>About Us</h1>
-        <h2>Locations</h2>
-        <h2>Origin Story</h2>
-        <img src="assets/images/about.jpg">
-        <p>In the bustling cityscape of Silicon Valley, where innovation and technology intertwine with everyday life, a visionary entrepreneur named Alex Webb decided to bridge the gap between the digital realm and culinary excellence. Drawing inspiration from the elegance of coding and the structured beauty of HTML, Alex envisioned a unique dining experience that seamlessly blended the precision of code with the artistry of gastronomy. With a background in software development and a passion for exquisite cuisine, Alex embarked on a journey to create a restaurant that mirrored the clean lines and efficiency of HTML, giving birth to "CodeCuisine." This avant-garde eatery not only offers delectable dishes but also serves them up in an atmosphere reminiscent of a well-designed website, where each menu item is a carefully crafted code snippet, and every dining experience is an exploration of the delicious possibilities that emerge when technology and culinary artistry converge. CodeCuisine has quickly become a haven for tech enthusiasts and food connoisseurs alike, celebrating the harmonious fusion of coding inspiration and gourmet delights.
-        </p>
-        <ul>
-            <li>Address: 123 Tech Avenue, Silicon City, CA 95001</li>
-            <li>456 Innovation Street, Techtopia, CA 95002</li>
-            <li>789 Gourmet Lane, Byteburg, CA 95003</li>
-            <li>101 Silicon Boulevard, Innoville, CA 95004</li>
     </main>
 </body>
 </html>
