--- a/menu.html
+++ b/menu.html
@@ -11,24 +11,37 @@
     <!-- MENU PAGE -->
     <!-- TODO: Navbar here -->
     <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#menu">Menu</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-    </nav>
-    </ul>
+        <a href="index.html">Home</a>
+        <a href="menu.html">Menu</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+</nav>
     <!-- TODO: Banner Image here-->
     <img id="banner" src="assets/images/banner.png" alt="banner">
     <main>
         <!-- Your job is to make the menu items in each section below a proper table! -->
-        Appetizers
-
-        Name Price
-        Chicken Satay $7.95
-        Fresh Rolls $6.95
+        <h1>Our Menu</h1>
+        <h2>Appetizers</h2>
+        <table id="Apps">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><i class="fas fa-star"></i> Chicken Satay</td>
+                    <td>$7.95</td>
+                </tr>
+                <tr>
+                    <td>Fresh Rolls</td>
+                    <td>$6.95</td>
+                </tr>
+            </tbody>
+        </table>
         
-        Lunch
+        <h2>Lunch</h2>
 
         Name Price
         Panang Curry $9.95
@@ -37,32 +50,33 @@
         Tom Ka Soup $8.95
         Tom Yum Soup $8.95
 
-        Dinner
+        <h2>Dinner</h2>
 
         Name Price
         Pad Thai $10.95
         Pad See Ew $10.49
         Rad Nah $10.49
 
-        Dessert
+        <h2>Dessert</h2>
 
         Name Price
         Black Sticky Rice Pudding $3.99
         Mango Sticky Rice $5.99
 
-        Beverages
+        <h2>Beverages</h2>
 
         Name Price
         Thai Iced Coffee $3.49
         Thai Iced Tea $3.49
         Unsweetened Iced Tea $2.49
 
-        Side Orders
+        <h2>Side Orders</h2>
         
         Name Price
         Jasmine rice $1.99
         Brown rice $2.49
-        Cucumber Salad $2.99        
+        Cucumber Salad $2.99
+        </table>        
     </main>
 </body>
 </html>
