--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link 
+    rel="stylesheet" 
+    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+    crossorigin="anonymous"/>
     <!-- Remember to link to your CSS file! -->
 </head>
 <body>
@@ -28,13 +33,16 @@
         </p>
         <h2>Contact Info</h2>
         <p>
-            <strong>Phone Number:</strong> TBD
+            <i class="fa fa-phone" aria-hidden="true"></i>
+            <strong>Phone Number: 010-010-0101</strong>
         </p>
         <p>
-            <strong>Email:</strong> TBD
+            <i class="fa fa-envelope" aria-hidden="true"></i>
+            <strong>Email: emailus@hthaimlrestaurant.com</strong>
         </p>
         <p>
-            <strong>Address:</strong> TBD
+            <i class="fa fa-map-marker" aria-hidden="true"></i>
+            <strong>Address: 123 Tech Avenue, Silicon City, CA 95001</strong> 
         </p>
     </main>
 </body>
